# dlp-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: interview-notes.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dlp-simulation.yml  veris-api-trigger.yml  veris-simulation.yml
.streamlit/: config.toml
.veris/: Dockerfile.sandbox  config.yaml  veris.yaml
agent/: orchestrator.py  prompts.py  replay.py  secrets.py  tools.py
api/: server.py
docs/: P0-hardening.md  P1-hardening.md
mediguard_dlp/: __init__.py  server.py
secrets/: .gitignore  example.secrets
sessions/: .gitignore
tests/: test_agent.py  test_leaks.py  veris_simulation.py  veris_trigger.py
ui/: app.py
voicerun/: config.py  handler.py
voicerun/data/: patients.json
voicerun/dlp-health-agent/: README.md  handler.py  requirements.txt  tools.py
voicerun/dlp-health-agent/.voicerun/: agent.yaml
voicerun/dlp-health-agent/data/: doctors.json
workflows/: debug_onboarding.md
